force-app/main/default/objects/Vendor_position_application__c/Vendor_position_application__c.object-meta.xml
<CustomObject>
    <description>Object used to store information about applications on a position per vendor, such as number of applications a vendor has made on a position.</description>
    <label>Vendor position application</label>
    <nameField>
        <label>Vendor position application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor position applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>