force-app/main/default/objects/Vendor_position_application__c/fields/Number_of_active_applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_active_applications__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of active applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>