force-app/main/default/objects/Vendor_position_application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Vendor position applications</relationshipLabel>
    <relationshipName>Vendor_position_applications</relationshipName>
    <type>Lookup</type>
</CustomField>