force-app/main/default/objects/Vendor_position_application__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor position applications</relationshipLabel>
    <relationshipName>Vendor_position_applications</relationshipName>
    <type>Lookup</type>
</CustomField>