force-app/main/default/objects/Vendor_position_application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>